# ai-news-portal

./: .gitignore  supabase_schema.sql
agents/: .env.example  __init__.py  crew.py  fetch_real_news.py  line_sender.py  main.py  pyproject.toml  requirements.txt  scheduler.py  seed_news.py  seed_wc2026.py  seed_world_cup.py  supabase_client.py  tasks.py
agents/output/: analysis_all_20260627_144424.json  analysis_tech_20260627_190236.json  analysis_tech_20260627_190908.json  analysis_tech_20260627_191249.json
agents/tools/: __init__.py  fact_checker.py  market_data.py  news_fetcher.py  sports_fetcher.py
apps_script/: Code.gs
web/: deploy_script.js  package-lock.json  package.json
web/.netlify/: netlify.toml
web/.netlify/deploy/v1/blobs/deploy/: L19nbG9iYWwtZXJyb3I  L19ub3QtZm91bmQ  L2luZGV4  L3NldHRpbmdz  NDA0Lmh0bWw  NTAwLmh0bWw
web/.netlify/functions/: manifest.json
web/.netlify/functions-internal/___netlify-server-handler/: ___netlify-server-handler.json  run-config.json  server.js
web/.netlify/functions-internal/___netlify-server-handler/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json
web/.netlify/functions-internal/___netlify-server-handler/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
web/app/: globals.css  layout.js  page.js
web/app/api/chat/: route.js
web/app/api/webhook/: route.js
web/app/settings/: page.js
(+24 files in other folders)
