[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "crewai[google-genai]>=1.15.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "yfinance>=1.4.1",
]
